Improve call page and add diagnostic data
